# Gladiator_war

Gladiator/: CMakeLists.txt  main.cpp
Gladiator 2/: CMakeLists.txt  main.cpp
Gladiator 2/Sources/: Enemies.h  Gladiator.h  Objects.h  Peticiones.h  VHome.h
Gladiator server/: main.cpp
Gladiator server/Sources/: Enemies.h  Obstacles.h  Pelea.h  Peticiones.h
Gladiator/Sources/: Enemies.h  Gladiator.h  Objects.h
Gladiatorfin/: CMakeLists.txt
Gladiatorfin/Sources/: Gladiator.h  Objects.h
json/: CMakeLists.txt  main.cpp
